重新设计测试用例